added item lvl, quality field. Validation field